--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
         <span class="navbar-brand mb-0 h1">Weather dashboard by Alex</span>
     </nav>
     <h1>hello world</h1>
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+    <form>
+        <div class="form-group">
+            <label for="exampleInputEmail1">search</label>
+            <input type="email" class="form-control" id="search" placeholder="search">
+            <small id="emailHelp" class="form-text text-muted">Search for a city!</small>
         </div>
-      </div>
+    </form>
+    <button type="button" class="btn btn-primary btn-lg">GO!</button>
+    
 </body>
     <script src="script.js"> </script>   
 </html>
