added event listenr, api call

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     <form>
         <div class="form-group">
             <label for="exampleInputEmail1">search</label>
-            <input type="email" class="form-control" id="search" placeholder="search">
-            <small id="emailHelp" class="form-text text-muted">Search for a city!</small>
+            <input id="city" type="email" class="form-control"  placeholder="search">
+            <small id="searchCity" class="form-text text-muted">Search for a city!</small>
+            <button id="search" class="btn btn-primary btn-lg">GO!</button>
+
         </div>
     </form>
-    <button type="button" class="btn btn-primary btn-lg">GO!</button>
     
 </body>
     <script src="script.js"> </script>   
