--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
     <form>
         <div class="form-group">
             <label for="exampleInputEmail1">search</label>
-            <input id="city" type="email" class="form-control"  placeholder="search">
+            <input id="search-field"  class="form-control"  placeholder="search">
             <small id="searchCity" class="form-text text-muted">Search for a city!</small>
-            <button id="search" class="btn btn-primary btn-lg">GO!</button>
+            <button id="fetch-button" class="btn btn-primary btn-lg">GO!</button>
 
         </div>
     </form>
+    <div id="weather-results"></div>
     
 </body>
-    <script src="script.js"> </script>   
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="./script.js"> </script>   
 </html>
