--- a/index.html
+++ b/index.html
@@ -12,36 +12,44 @@
 </head>
 
 <body>
-     <nav class="navbar navbar-light bg-dark">
+    <nav class="navbar navbar-light bg-dark">
         <span class="navbar-brand mb-0 h1">Weather dashboard by Alex</span>
     </nav>
 
     <!-- <h1>hello world</h1> -->
-    <div class="container jumbotron bg-secondary text-center">
-        hello world
-        <div id="weather-results"></div>
+    <div class="container-fluid jumbotron bg-secondary text-center">
         <form>
-        <div class="form-group">
-            <input id="search-field" class="form-control" placeholder="search">
-            <small id="searchCity" class="form-text text-muted">Search for a city!</small>
-            <button id="fetch-button" class="btn btn-primary btn-lg">GO!</button>
+            <div class="form-group">
+                <input id="search-field" class="form-control" placeholder="search">
+                <small id="searchCity" class="form-text text-muted">Search for a city!</small>
+                <button id="fetch-button" class="btn btn-primary btn-lg">GO!</button>
 
+            </div>
+        </form>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-3 text-center">
+                <div id="weather-results"></div>
+
+            </div>
+
+            <div class="col-9">
+                <div id="dashBoard" class="shadow"></div>
+                <div id="five"></div>
+                <div id="foreCast" class="card-group border shadow"></div>
+            </div>
         </div>
-    </form>
-        <div class="col-9">
-            <div id="dashBoard" class="shadow"></div>
-            <div id="five"></div>
-
-            <div id="foreCast" class="card-group border shadow"></div>
-
-        </div>
-
-
     </div>
 
 
 
+
+
 </body>
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
@@ -54,7 +62,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
-    
 <script src="./script.js"> </script>
 
 </html>
