--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content=" width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="styles" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Weather Dashboard</title>
 </head>
 
 <body>
     <nav class="navbar navbar-light bg-dark">
-        <span class="navbar-brand mb-0 h1">Weather dashboard by Alex</span>
+        <span class="navbar-brand mb-0 text-white">Weather dashboard by Alex</span>
     </nav>
 
     <!-- <h1>hello world</h1> -->
-    <div class="container-fluid jumbotron bg-secondary text-center">
+    <div class="container-fluid p-5 mb-5 jumbotron bg-secondary text-center">
         <form>
             <div class="form-group">
                 <input id="search-field" class="form-control" placeholder="search">
-                <small id="searchCity" class="form-text text-muted">Search for a city!</small>
+                <small id="searchCity" class="form-text text-muted text-white">Search for a city!</small>
                 <button id="fetch-button" class="btn btn-primary btn-lg">GO!</button>
 
             </div>
@@ -35,15 +35,12 @@
             </div>
 
             <div class="col-9">
-                <div id="dashBoard" class="shadow"></div>
+                <div id="dashBoard" class=""></div>
                 <div id="five"></div>
-                <div id="foreCast" class="card-group border shadow"></div>
+                <div id="foreCast" class="card-group  "></div>
             </div>
         </div>
     </div>
-
-
-
 
 
 </body>
@@ -59,9 +56,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-    crossorigin="anonymous"></script>
+
 <script src="./script.js"> </script>
 
 </html>
