--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
             </div>
         </form>
     </div>
-    <div class="container">
-        <div class="row">
+    <div class="container row mx-auto">
+        <div class="col-12 row">
             <div class="col-3 text-center">
                 <div id="weather-results"></div>
-
             </div>
 
             <div class="col-9">
