--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             </div>
         </form>
     </div>
-    <div class="container row mx-auto">
-        <div class="col-12 row">
-            <div class="col-3 text-center">
+    <div class="container-fluid row ">
+        <div class="col">
+            <div class="col m-2">
                 <div id="weather-results"></div>
             </div>
 
-            <div class="col-9">
+            <div class="col m-2">
                 <div id="dashBoard" class=""></div>
                 <div id="five"></div>
                 <div id="foreCast" class="card-group  "></div>
