--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
+    <!-- nav -->
     <nav class="navbar navbar-light bg-dark">
         <span class="navbar-brand mb-0 text-white">Weather dashboard by Alex</span>
     </nav>
-
-    <!-- <h1>hello world</h1> -->
+<!-- searchbar -->
     <div class="container-fluid p-5 mb-5 jumbotron bg-secondary text-center">
         <form>
             <div class="form-group">
@@ -27,12 +27,14 @@
             </div>
         </form>
     </div>
+
+    <!-- single day forecast and five day forecast -->
     <div class="container-fluid row ">
         <div class="col">
             <div class="col m-2">
                 <div id="weather-results"></div>
             </div>
-
+<!-- fiveday forecast -->
             <div class="col m-2">
                 <div id="dashBoard" class=""></div>
                 <div id="five"></div>
