--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- single day forecast and five day forecast -->
-    <div class="container-fluid row ">
+    <div class="container-fluid p-5 mb-5">
         <div class="col">
             <div class="col m-2">
                 <div id="weather-results"></div>
