--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <!-- nav -->
-    <nav class="navbar navbar-light bg-dark">
-        <span class="navbar-brand mb-0 text-white">Weather dashboard by Alex</span>
+    <nav class="navbar bg-dark ">
+        <span class="navbar-brand text-white p-3">Weather dashboard by Alex</span>
     </nav>
 <!-- searchbar -->
-    <div class="container-fluid p-5 mb-5 jumbotron bg-secondary text-center">
+    <div class="container-fluid p-5 jumbotron bg-secondary text-center">
         <form>
             <div class="form-group">
                 <input id="search-field" class="form-control" placeholder="search">
@@ -29,13 +29,14 @@
     </div>
 
     <!-- single day forecast and five day forecast -->
-    <div class="container-fluid p-5 mb-5">
+    <div class="container-fluid p-3 mb-5">
         <div class="col">
             <div class="col m-2">
                 <div id="weather-results"></div>
             </div>
+            
 <!-- fiveday forecast -->
-            <div class="col m-2">
+            <div class="col p-2 mb-5">
                 <div id="dashBoard" class=""></div>
                 <div id="five"></div>
                 <div id="foreCast" class="card-group  "></div>
