--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </nav>
 <!-- searchbar -->
     <div class="container-fluid p-5 jumbotron bg-secondary text-center">
+        <h1 class="text-white">Weather Dashboard</h1>
         <form>
             <div class="form-group">
                 <input id="search-field" class="form-control" placeholder="search">
@@ -29,7 +30,7 @@
     </div>
 
     <!-- single day forecast and five day forecast -->
-    <div class="container-fluid p-3 mb-5">
+    <div class="container-fluid p-3 mb-5 text-white">
         <div class="col">
             <div class="col m-2">
                 <div id="weather-results"></div>
@@ -38,11 +39,13 @@
 <!-- fiveday forecast -->
             <div class="col p-2 mb-5">
                 <div id="dashBoard" class=""></div>
-                <div id="five"></div>
-                <div id="foreCast" class="card-group  "></div>
+                <div id="five" class="text-white text-center"></div>
+                <div id="foreCast" class="card-group"></div>
             </div>
         </div>
     </div>
+
+    <footer class="footer p-3 text-center">Made by: Alexander 🦕</footer>
 
 
 </body>
