--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span class="navbar-brand text-white p-3">Weather dashboard by Alex</span>
     </nav>
     <!-- searchbar -->
-    <div class="container-fluid p-5 jumbotron bg-secondary text-center">
+    <div class="container-fluid p-5 jumbotron text-center" id="jumbo">
 
         <div class="container py-5">
             <h1 class="text-body-emphasis">Weather Dashboard</h1>
