--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
     <!-- single day forecast and five day forecast -->
-    <div class="container-fluid p-3 mb-5 text-white">
+    <div class="container-fluid p-3 mb-5 text-black">
         <div class="col">
             <div class="col m-2">
                 <div id="weather-results"></div>
@@ -44,7 +44,7 @@
             <!-- fiveday forecast -->
             <div class="col p-2 mb-5">
                 <div id="dashBoard" class=""></div>
-                <div id="five" class="text-white text-center"></div>
+                <div id="five" class="text-black text-center"></div>
                 <div id="foreCast" class="card-group"></div>
             </div>
         </div>
