--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <span class="navbar-brand text-white p-3">Weather dashboard by Alex</span>
     </nav>
     <!-- searchbar -->
-    <div class="container-fluid jumbotron text-center" id="jumbo">
+    <div class="container-fluid jumbotron text-center " id="jumbo">
 
-        <div class="container py-5">
+        <div class="container-fluid align-items-center p-5">
             <h1 class="text-body-emphasis">Weather Dashboard</h1>
             <form>
                 <div class="form-group">
@@ -35,9 +35,9 @@
 
 
     <!-- single day forecast and five day forecast -->
-    <div class="container-fluid p-3 mb-5 text-black">
+    <div class="container-fluid p-3 mb-5 text-black ">
         <div class="col">
-            <div class="col m-2">
+            <div class="col m-2 max-width-100px">
                 <div id="weather-results"></div>
             </div>
 
